# serializer version: 1
# name: test_card_view_anonymous_renders_description_tab
  dict({
    'num_queries': 2,
    'queries': list([
      dict({
        'origin': list([
          'StructureCardView.setup[www/insertion_views/views.py]',
          'wrapper[utils/readonly.py]',
        ]),
        'sql': '''
          SELECT "insertion_structure"."id",
                 "insertion_structure"."address_line_1",
                 "insertion_structure"."address_line_2",
                 "insertion_structure"."post_code",
                 "insertion_structure"."city",
                 "insertion_structure"."insee_city_id",
                 "insertion_structure"."coordinates",
                 "insertion_structure"."uid",
                 "insertion_structure"."source_id",
                 "insertion_structure"."source_link",
                 "insertion_structure"."siret",
                 "insertion_structure"."name",
                 "insertion_structure"."description",
                 "insertion_structure"."website",
                 "insertion_structure"."email",
                 "insertion_structure"."phone",
                 "insertion_structure"."opening_hours",
                 "insertion_structure"."updated_on",
                 "insertion_structure"."created_at",
                 "insertion_structure"."updated_at",
                 "insertion_genericreferenceitem"."id",
                 "insertion_genericreferenceitem"."source",
                 "insertion_genericreferenceitem"."kind",
                 "insertion_genericreferenceitem"."value",
                 "insertion_genericreferenceitem"."label",
                 "insertion_genericreferenceitem"."description",
                 "insertion_genericreferenceitem"."created_at",
                 "insertion_genericreferenceitem"."updated_at"
          FROM "insertion_structure"
          INNER JOIN "insertion_genericreferenceitem" ON ("insertion_structure"."source_id" = "insertion_genericreferenceitem"."id")
          WHERE "insertion_structure"."uid" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'StructureCardView.setup[www/insertion_views/views.py]',
          'wrapper[utils/readonly.py]',
        ]),
        'sql': '''
          SELECT "insertion_service"."id",
                 "insertion_service"."address_line_1",
                 "insertion_service"."address_line_2",
                 "insertion_service"."post_code",
                 "insertion_service"."city",
                 "insertion_service"."insee_city_id",
                 "insertion_service"."coordinates",
                 "insertion_service"."uid",
                 "insertion_service"."source_id",
                 "insertion_service"."source_link",
                 "insertion_service"."structure_id",
                 "insertion_service"."name",
                 "insertion_service"."description",
                 "insertion_service"."description_short",
                 "insertion_service"."kind_id",
                 "insertion_service"."fee_id",
                 "insertion_service"."fee_details",
                 "insertion_service"."publics_details",
                 "insertion_service"."access_conditions_di",
                 "insertion_service"."access_conditions_dora",
                 "insertion_service"."eligibility_zones",
                 "insertion_service"."mobilizations_details",
                 "insertion_service"."mobilization_modes_beneficiaries_external_form_link",
                 "insertion_service"."mobilization_modes_beneficiaries_external_form_link_text",
                 "insertion_service"."mobilization_modes_beneficiaries_other",
                 "insertion_service"."mobilization_modes_professionals_external_form_link",
                 "insertion_service"."mobilization_modes_professionals_external_form_link_text",
                 "insertion_service"."mobilization_modes_professionals_other",
                 "insertion_service"."credentials",
                 "insertion_service"."credentials_documents",
                 "insertion_service"."credentials_online_form",
                 "insertion_service"."opening_hours",
                 "insertion_service"."opening_hours_text",
                 "insertion_service"."contact_full_name",
                 "insertion_service"."contact_email",
                 "insertion_service"."contact_phone",
                 "insertion_service"."contact_is_public",
                 "insertion_service"."is_orientable_with_form",
                 "insertion_service"."average_orientation_response_delay_days",
                 "insertion_service"."dora_synced_at",
                 "insertion_service"."updated_on",
                 "insertion_service"."created_at",
                 "insertion_service"."updated_at",
                 "insertion_genericreferenceitem"."id",
                 "insertion_genericreferenceitem"."source",
                 "insertion_genericreferenceitem"."kind",
                 "insertion_genericreferenceitem"."value",
                 "insertion_genericreferenceitem"."label",
                 "insertion_genericreferenceitem"."description",
                 "insertion_genericreferenceitem"."created_at",
                 "insertion_genericreferenceitem"."updated_at"
          FROM "insertion_service"
          LEFT OUTER JOIN "insertion_genericreferenceitem" ON ("insertion_service"."kind_id" = "insertion_genericreferenceitem"."id")
          WHERE "insertion_service"."structure_id" IN (%s)
          ORDER BY "insertion_service"."name" ASC
        ''',
      }),
    ]),
  })
# ---
# name: test_card_view_contact_modal_contains_structure_coordinates
  '''
  <div aria-labelledby="structure-contact-modal-label" aria-modal="true" class="modal fade" id="structure-contact-modal" role="dialog" tabindex="-1">
      <div class="modal-dialog modal-dialog-centered">
          <div class="modal-content">
              <div class="modal-header">
                  <h3 class="modal-title" id="structure-contact-modal-label">
                      Coordonnées de contact
                  </h3>
                  <button aria-label="Fermer" class="btn-close" data-bs-dismiss="modal" type="button">
                  </button>
              </div>
              <div class="modal-body">
                  <div class="d-flex">
                      <i aria-hidden="true" class="ri-map-pin-2-line me-2">
                      </i>
                      <address class="m-0">
                          10 rue de la Paix, 75002 Paris
                      </address>
                  </div>
                  <hr class="my-3"/>
                  <ul class="list-unstyled mb-0">
                      <li>
                          <i aria-hidden="true" class="ri-mail-line fw-normal me-2">
                          </i>
                          <a aria-label="Contact par mail" class="text-break" href="mailto:contact@structure.test">
                              contact@structure.test
                          </a>
                          <button class="btn-link fw-medium ms-1" data-bs-placement="top" data-bs-title="Copié !" data-bs-toggle="tooltip" data-bs-trigger="manual" data-it-clipboard-button="copy" data-it-copy-to-clipboard="contact@structure.test" data-matomo-action="clic" data-matomo-category="fiche-structure" data-matomo-event="true" data-matomo-option="copier-email-contact" type="button">
                              <i aria-hidden="true" class="ri-file-copy-line fw-normal">
                              </i>
                              <span class="visually-hidden">
                                  Copier l’adresse e-mail
                              </span>
                          </button>
                      </li>
                      <li>
                          <i aria-hidden="true" class="ri-phone-line fw-normal me-2">
                          </i>
                          01 02 03 04 05
                          <button class="btn-link fw-medium ms-1" data-bs-placement="top" data-bs-title="Copié !" data-bs-toggle="tooltip" data-bs-trigger="manual" data-it-clipboard-button="copy" data-it-copy-to-clipboard="+33102030405" data-matomo-action="clic" data-matomo-category="fiche-structure" data-matomo-event="true" data-matomo-option="copier-email-contact" type="button">
                              <i aria-hidden="true" class="ri-file-copy-line fw-normal">
                              </i>
                              <span class="visually-hidden">
                                  Copier
                              </span>
                          </button>
                      </li>
                      <li>
                          <i aria-hidden="true" class="ri-global-line fw-normal me-2">
                          </i>
                          <a aria-label="Voir le site web de la structure (ouverture dans un nouvel onglet)" class="btn-link fw-medium has-external-link" data-matomo-action="clic" data-matomo-category="fiche-structure" data-matomo-event="true" data-matomo-option="lien-site-web" href="https://structure.test" rel="noopener noreferrer" target="_blank">
                              https://structure.test
                          </a>
                      </li>
                  </ul>
              </div>
              <div class="modal-footer">
                  <button class="btn btn-primary" data-bs-dismiss="modal" type="button">
                      Terminer
                  </button>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: test_detail_basic_dora
  '''
  <main class="s-main" id="main" role="main">
      <div aria-atomic="true" aria-live="polite" class="toast-container">
      </div>
      <section class="s-title-02">
          <div class="s-title-02__container container">
              <div class="s-title-02__row row">
                  <div class="s-title-02__col col-12">
                      <div class="c-prevstep">
                          <a aria-label="Retour à la page précédente" class="btn btn-ico btn-link ps-0" href="/">
                              <i aria-hidden="true" class="ri-arrow-drop-left-line ri-xl fw-medium">
                              </i>
                              <span>
                                  Retour
                              </span>
                          </a>
                      </div>
                      <h1>
                          Mon service de test
                          <span class="badge badge-base rounded-pill text-bg-success">
                              Mise à jour 15/01/2025
                          </span>
                      </h1>
                      <div class="c-box c-box--action">
                          <h2 class="visually-hidden">
                              Actions rapides
                          </h2>
                          <div class="form-row align-items-center gx-3">
                              <div class="form-group col-12 col-lg-auto">
                                  <a class="btn btn-lg btn-white btn-block justify-content-center" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="orienter-un-bénéficiaire" href="https://dora.inclusion.gouv.fr/services/test-service-uid/orienter?mtm_campaign=lesemplois&mtm_kwd=service-professional" rel="noopener" target="_blank">
                                      Orienter le bénéficiaire
                                  </a>
                              </div>
                              <div class="form-group col-12 col-lg d-lg-flex justify-content-lg-end">
                                  <div class="dropdown">
                                      <button aria-expanded="false" aria-haspopup="true" aria-label="Plus d'actions" class="btn btn-lg btn-link-white btn-block w-lg-auto pe-0" data-bs-toggle="dropdown" id="other_actions_orientation" type="button">
                                          <i aria-hidden="true" class="ri-more-2-fill fw-medium">
                                          </i>
                                      </button>
                                      <div aria-labelledby="other_actions_orientation" class="dropdown-menu dropdown-menu-lg-end">
                                          <button class="btn btn-ico justify-content-start dropdown-item" data-bs-placement="top" data-bs-title="Copié !" data-bs-toggle="tooltip" data-bs-trigger="manual" data-it-clipboard-button="copy" data-it-copy-to-clipboard="http://testserver/insertion/service/test-service-uid/card" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="copier-lien-page" type="button">
                                              <i aria-hidden="true" class="ri-file-copy-line fw-normal">
                                              </i>
                                              <span>
                                                  Copier le lien de cette page
                                              </span>
                                          </button>
                                      </div>
                                  </div>
                              </div>
                          </div>
                      </div>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="s-section__col col-12 col-lg-8 order-2 order-lg-1">
                      <div class="c-box mb-3 mb-md-4">
                          <h2 class="h3">
                              Informations du service
                          </h2>
                          <ul class="list-data">
                          </ul>
                          <span class="badge badge-xs rounded-pill bg-light text-primary mt-3">
                              Source : Dora
                          </span>
                      </div>
                  </div>
                  <div class="s-section__col col-12 col-lg-4 order-1 order-lg-2">
                      <div class="c-box mb-3 mb-md-4">
                          <h2 class="h3">
                              Informations de la structure
                          </h2>
                          <p>
                              Ma structure de test
                          </p>
                          <a class="btn btn-secondary w-100" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="voir-fiche-structure" href="/insertion/structure/test-structure-uid/card" type="button">
                              Voir la fiche structure
                          </a>
                      </div>
                  </div>
                  <div class="col-12 col-lg-8 order-3">
                      <div class="c-box mb-3 mb-md-4">
                          <h2 class="h3">
                              Description du service
                          </h2>
                          <p class="mb-0">
                          </p>
                          <p>
                              Description du service.
                          </p>
                          <p>
                          </p>
                      </div>
                      <div class="c-box mb-3 mb-md-4">
                          <h2 class="h3">
                              Pré-requis et justificatifs
                          </h2>
                          <ul class="mb-0">
                              <li>
                                  Avoir plus de 18 ans
                              </li>
                              <li>
                                  Résider en France
                              </li>
                              <li>
                                  Pièce d'identité en cours de validité
                              </li>
                          </ul>
                      </div>
                  </div>
              </div>
          </div>
      </section>
  </main>
  
  '''
# ---
# name: test_detail_basic_not_dora
  '''
  <main class="s-main" id="main" role="main">
      <div aria-atomic="true" aria-live="polite" class="toast-container">
      </div>
      <section class="s-title-02">
          <div class="s-title-02__container container">
              <div class="s-title-02__row row">
                  <div class="s-title-02__col col-12">
                      <div class="c-prevstep">
                          <a aria-label="Retour à la page précédente" class="btn btn-ico btn-link ps-0" href="/">
                              <i aria-hidden="true" class="ri-arrow-drop-left-line ri-xl fw-medium">
                              </i>
                              <span>
                                  Retour
                              </span>
                          </a>
                      </div>
                      <h1>
                          Mon service de test
                          <span class="badge badge-base rounded-pill text-bg-success">
                              Mise à jour 15/01/2025
                          </span>
                      </h1>
                      <div class="c-box c-box--action">
                          <h2 class="visually-hidden">
                              Actions rapides
                          </h2>
                          <div class="form-row align-items-center gx-3">
                              <div class="form-group col-12 col-lg-auto">
                                  <a class="btn btn-lg btn-white btn-block justify-content-center" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="orienter-un-bénéficiaire" href="https://dora.inclusion.gouv.fr/services/di--test-service-uid/orienter?mtm_campaign=lesemplois&mtm_kwd=service-professional" rel="noopener" target="_blank">
                                      Orienter le bénéficiaire
                                  </a>
                              </div>
                              <div class="form-group col-12 col-lg d-lg-flex justify-content-lg-end">
                                  <div class="dropdown">
                                      <button aria-expanded="false" aria-haspopup="true" aria-label="Plus d'actions" class="btn btn-lg btn-link-white btn-block w-lg-auto pe-0" data-bs-toggle="dropdown" id="other_actions_orientation" type="button">
                                          <i aria-hidden="true" class="ri-more-2-fill fw-medium">
                                          </i>
                                      </button>
                                      <div aria-labelledby="other_actions_orientation" class="dropdown-menu dropdown-menu-lg-end">
                                          <button class="btn btn-ico justify-content-start dropdown-item" data-bs-placement="top" data-bs-title="Copié !" data-bs-toggle="tooltip" data-bs-trigger="manual" data-it-clipboard-button="copy" data-it-copy-to-clipboard="http://testserver/insertion/service/test-service-uid/card" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="copier-lien-page" type="button">
                                              <i aria-hidden="true" class="ri-file-copy-line fw-normal">
                                              </i>
                                              <span>
                                                  Copier le lien de cette page
                                              </span>
                                          </button>
                                      </div>
                                  </div>
                              </div>
                          </div>
                      </div>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="s-section__col col-12 col-lg-8 order-2 order-lg-1">
                      <div class="c-box mb-3 mb-md-4">
                          <h2 class="h3">
                              Informations du service
                          </h2>
                          <ul class="list-data">
                          </ul>
                          <span class="badge badge-xs rounded-pill bg-light text-primary mt-3">
                              Source : Other
                          </span>
                      </div>
                  </div>
                  <div class="s-section__col col-12 col-lg-4 order-1 order-lg-2">
                      <div class="c-box mb-3 mb-md-4">
                          <h2 class="h3">
                              Informations de la structure
                          </h2>
                          <p>
                              Ma structure de test
                          </p>
                          <a class="btn btn-secondary w-100" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="voir-fiche-structure" href="/insertion/structure/test-structure-uid/card" type="button">
                              Voir la fiche structure
                          </a>
                      </div>
                  </div>
                  <div class="col-12 col-lg-8 order-3">
                      <div class="c-box mb-3 mb-md-4">
                          <h2 class="h3">
                              Description du service
                          </h2>
                          <p class="mb-0">
                          </p>
                          <p>
                              Description du service.
                          </p>
                          <p>
                          </p>
                      </div>
                      <div class="c-box mb-3 mb-md-4">
                          <h2 class="h3">
                              Pré-requis et justificatifs
                          </h2>
                          <ul class="mb-0">
                              <li>
                                  Être orienté par un prescripteur
                              </li>
                              <li>
                                  Avoir 18 ans
                              </li>
                          </ul>
                      </div>
                  </div>
              </div>
          </div>
      </section>
  </main>
  
  '''
# ---
# name: test_detail_credential_documents
  '''
  <div class="c-box mb-3 mb-md-4" id="credentials-documents">
      <h2 class="h3">
          Documents à compléter
      </h2>
      <ul class="mb-0">
          <li>
              <a href="https://s3.example.com/my_form.pdf?token=aaa" rel="noopener noreferrer" target="_blank">
                  my_form.pdf
              </a>
          </li>
          <li>
              <a href="https://s3.example.com/justificatif.docx?token=bbb" rel="noopener noreferrer" target="_blank">
                  justificatif.docx
              </a>
          </li>
      </ul>
  </div>
  
  '''
# ---
# name: test_detail_not_orientable
  '''
  <div class="c-box c-box--action">
      <h2 class="visually-hidden">
          Actions rapides
      </h2>
      <div class="form-row align-items-center gx-3">
          <div class="form-group col-12 col-lg d-lg-flex justify-content-lg-end">
              <div class="dropdown">
                  <button aria-expanded="false" aria-haspopup="true" aria-label="Plus d'actions" class="btn btn-lg btn-link-white btn-block w-lg-auto pe-0" data-bs-toggle="dropdown" id="other_actions_orientation" type="button">
                      <i aria-hidden="true" class="ri-more-2-fill fw-medium">
                      </i>
                  </button>
                  <div aria-labelledby="other_actions_orientation" class="dropdown-menu dropdown-menu-lg-end">
                      <button class="btn btn-ico justify-content-start dropdown-item" data-bs-placement="top" data-bs-title="Copié !" data-bs-toggle="tooltip" data-bs-trigger="manual" data-it-clipboard-button="copy" data-it-copy-to-clipboard="http://testserver/insertion/service/test-not-orientable-uid/card" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="copier-lien-page" type="button">
                          <i aria-hidden="true" class="ri-file-copy-line fw-normal">
                          </i>
                          <span>
                              Copier le lien de cette page
                          </span>
                      </button>
                  </div>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: test_detail_orientable_and_user_authenticated
  '''
  <div class="c-box c-box--action">
      <h2 class="visually-hidden">
          Actions rapides
      </h2>
      <div class="form-row align-items-center gx-3">
          <div class="form-group col-12 col-lg-auto">
              <a class="btn btn-lg btn-white btn-block justify-content-center" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="orienter-un-bénéficiaire" href="https://dora.inclusion.gouv.fr/services/di--test-orientable-uid/orienter?mtm_campaign=lesemplois&mtm_kwd=service-professional" rel="noopener" target="_blank">
                  Orienter le bénéficiaire
              </a>
          </div>
          <div class="form-group col-12 col-lg d-lg-flex justify-content-lg-end">
              <div class="dropdown">
                  <button aria-expanded="false" aria-haspopup="true" aria-label="Plus d'actions" class="btn btn-lg btn-link-white btn-block w-lg-auto pe-0" data-bs-toggle="dropdown" id="other_actions_orientation" type="button">
                      <i aria-hidden="true" class="ri-more-2-fill fw-medium">
                      </i>
                  </button>
                  <div aria-labelledby="other_actions_orientation" class="dropdown-menu dropdown-menu-lg-end">
                      <button class="btn btn-ico justify-content-start dropdown-item" data-bs-placement="top" data-bs-title="Copié !" data-bs-toggle="tooltip" data-bs-trigger="manual" data-it-clipboard-button="copy" data-it-copy-to-clipboard="http://testserver/insertion/service/test-orientable-uid/card" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="copier-lien-page" type="button">
                          <i aria-hidden="true" class="ri-file-copy-line fw-normal">
                          </i>
                          <span>
                              Copier le lien de cette page
                          </span>
                      </button>
                  </div>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: test_detail_with_all_optional_fields
  '''
  <main class="s-main" id="main" role="main">
      <div aria-atomic="true" aria-live="polite" class="toast-container">
      </div>
      <section class="s-title-02">
          <div class="s-title-02__container container">
              <div class="s-title-02__row row">
                  <div class="s-title-02__col col-12">
                      <div class="c-prevstep">
                          <a aria-label="Retour à la page précédente" class="btn btn-ico btn-link ps-0" href="/">
                              <i aria-hidden="true" class="ri-arrow-drop-left-line ri-xl fw-medium">
                              </i>
                              <span>
                                  Retour
                              </span>
                          </a>
                      </div>
                      <h1>
                          Service complet
                          <span class="badge badge-base rounded-pill text-bg-success">
                              Mise à jour 01/06/2025
                          </span>
                      </h1>
                      <div class="c-box c-box--action">
                          <h2 class="visually-hidden">
                              Actions rapides
                          </h2>
                          <div class="form-row align-items-center gx-3">
                              <div class="form-group col-12 col-lg-auto">
                                  <a class="btn btn-lg btn-white btn-block justify-content-center" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="orienter-un-bénéficiaire" href="https://dora.inclusion.gouv.fr/services/test/orienter?mtm_campaign=lesemplois&mtm_kwd=service-professional" rel="noopener" target="_blank">
                                      Orienter le bénéficiaire
                                  </a>
                              </div>
                              <div class="form-group col-12 col-lg-auto">
                                  <button class="btn btn-lg btn-outline-white btn-block justify-content-center" data-bs-target="#service-contact-modal" data-bs-toggle="modal" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="voir-coordonnees-contact" type="button">
                                      Voir les coordonnées de contact du service
                                  </button>
                              </div>
                              <div class="form-group col-12 col-lg d-lg-flex justify-content-lg-end">
                                  <div class="dropdown">
                                      <button aria-expanded="false" aria-haspopup="true" aria-label="Plus d'actions" class="btn btn-lg btn-link-white btn-block w-lg-auto pe-0" data-bs-toggle="dropdown" id="other_actions_orientation" type="button">
                                          <i aria-hidden="true" class="ri-more-2-fill fw-medium">
                                          </i>
                                      </button>
                                      <div aria-labelledby="other_actions_orientation" class="dropdown-menu dropdown-menu-lg-end">
                                          <button class="btn btn-ico justify-content-start dropdown-item" data-bs-placement="top" data-bs-title="Copié !" data-bs-toggle="tooltip" data-bs-trigger="manual" data-it-clipboard-button="copy" data-it-copy-to-clipboard="http://testserver/insertion/service/test-service-full-uid/card" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="copier-lien-page" type="button">
                                              <i aria-hidden="true" class="ri-file-copy-line fw-normal">
                                              </i>
                                              <span>
                                                  Copier le lien de cette page
                                              </span>
                                          </button>
                                      </div>
                                  </div>
                              </div>
                          </div>
                      </div>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="s-section__col col-12 col-lg-8 order-2 order-lg-1">
                      <div class="c-box mb-3 mb-md-4">
                          <h2 class="h3 mb-2">
                              Informations du service
                          </h2>
                          <p class="fs-sm text-success">
                              <i aria-hidden="true" class="ri-time-line">
                              </i>
                              <strong>
                                  Réponse rapide : sous 3 jours
                              </strong>
                          </p>
                          <p>
                              Résumé court du service.
                          </p>
                          <ul class="list-data">
                              <li>
                                  <small>
                                      Public concerné
                                      <i aria-label="Toute personne majeure." class="ri-information-line ri-xl text-info" data-bs-title="Toute personne majeure." data-bs-toggle="tooltip" role="button" tabindex="0">
                                      </i>
                                  </small>
                                  <strong>
                                      Adultes
                                  </strong>
                              </li>
                              <li>
                                  <small>
                                      Lieu d'accueil
                                  </small>
                                  <strong>
                                      En présentiel — 12 rue de la Paix, Bâtiment B, 75001 Paris
                                  </strong>
                              </li>
                              <li>
                                  <small>
                                      Frais à charge
                                      <i aria-label="Sous conditions de ressources." class="ri-information-line ri-xl text-info" data-bs-title="Sous conditions de ressources." data-bs-toggle="tooltip" role="button" tabindex="0">
                                      </i>
                                  </small>
                                  <strong>
                                      Gratuit
                                  </strong>
                              </li>
                              <li>
                                  <small>
                                      Fréquence et horaires
                                      <i aria-label="Hors jours fériés" class="ri-information-line ri-xl text-info" data-bs-title="Hors jours fériés" data-bs-toggle="tooltip" role="button" tabindex="0">
                                      </i>
                                  </small>
                                  <div>
                                      <div class="d-flex gap-2">
                                          <strong>
                                              Lundi :
                                          </strong>
                                          <strong>
                                              9h00 à 17h00
                                          </strong>
                                      </div>
                                      <div class="d-flex gap-2">
                                          <strong>
                                              Mardi :
                                          </strong>
                                          <strong>
                                              9h00 à 17h00
                                          </strong>
                                      </div>
                                      <div class="d-flex gap-2">
                                          <strong>
                                              Mercredi :
                                          </strong>
                                          <strong>
                                              9h00 à 17h00
                                          </strong>
                                      </div>
                                      <div class="d-flex gap-2">
                                          <strong>
                                              Jeudi :
                                          </strong>
                                          <strong>
                                              9h00 à 17h00
                                          </strong>
                                      </div>
                                      <div class="d-flex gap-2">
                                          <strong>
                                              Vendredi :
                                          </strong>
                                          <strong>
                                              9h00 à 17h00
                                          </strong>
                                      </div>
                                  </div>
                              </li>
                          </ul>
                          <span class="badge badge-xs rounded-pill bg-light text-primary mt-3">
                              Source : Dora
                          </span>
                      </div>
                  </div>
                  <div class="s-section__col col-12 col-lg-4 order-1 order-lg-2">
                      <div class="c-box mb-3 mb-md-4">
                          <h2 class="h3">
                              Informations de la structure
                          </h2>
                          <p>
                              Structure complète
                          </p>
                          <a class="btn btn-secondary w-100" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="voir-fiche-structure" href="/insertion/structure/test-structure-full-uid/card" type="button">
                              Voir la fiche structure
                          </a>
                      </div>
                  </div>
                  <div class="col-12 col-lg-8 order-3">
                      <div class="c-box mb-3 mb-md-4">
                          <h2 class="h3">
                              Description du service
                          </h2>
                          <p class="mb-0">
                              Description complète
                          </p>
                          <p>
                              Avec du
                              <strong>
                                  markdown
                              </strong>
                              .
                          </p>
                          <p>
                          </p>
                      </div>
                      <div class="c-box mb-3 mb-md-4">
                          <h2 class="h3">
                              Thématiques et besoins associés
                          </h2>
                          <ul class="mb-0">
                              <li>
                                  <b>
                                      Logement et hébergement
                                  </b>
                                  : Louer un logement
                              </li>
                          </ul>
                      </div>
                      <div class="c-box mb-3 mb-md-4">
                          <h2 class="h3">
                              Pré-requis et justificatifs
                          </h2>
                          <ul class="mb-0">
                              <li>
                                  Être orienté par un prescripteur.
                              </li>
                          </ul>
                      </div>
                  </div>
              </div>
          </div>
      </section>
  </main>
  
  '''
# ---
# name: test_detail_with_external_orientation_link
  '''
  <div class="c-box c-box--action">
      <h2 class="visually-hidden">
          Actions rapides
      </h2>
      <div class="form-row align-items-center gx-3">
          <div class="form-group col-12 col-lg-auto">
              <a class="btn btn-lg btn-white btn-block justify-content-center" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="orienter-un-bénéficiaire" href="https://test.example.com" rel="noopener" target="_blank">
                  Orienter le bénéficiaire
              </a>
          </div>
          <div class="form-group col-12 col-lg d-lg-flex justify-content-lg-end">
              <div class="dropdown">
                  <button aria-expanded="false" aria-haspopup="true" aria-label="Plus d'actions" class="btn btn-lg btn-link-white btn-block w-lg-auto pe-0" data-bs-toggle="dropdown" id="other_actions_orientation" type="button">
                      <i aria-hidden="true" class="ri-more-2-fill fw-medium">
                      </i>
                  </button>
                  <div aria-labelledby="other_actions_orientation" class="dropdown-menu dropdown-menu-lg-end">
                      <button class="btn btn-ico justify-content-start dropdown-item" data-bs-placement="top" data-bs-title="Copié !" data-bs-toggle="tooltip" data-bs-trigger="manual" data-it-clipboard-button="copy" data-it-copy-to-clipboard="http://testserver/insertion/service/test-orientable-uid/card" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="copier-lien-page" type="button">
                          <i aria-hidden="true" class="ri-file-copy-line fw-normal">
                          </i>
                          <span>
                              Copier le lien de cette page
                          </span>
                      </button>
                  </div>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
